[package]
name = "simple_dht"
version = "0.1.0"
authors = ["Quentin Gliech <quentin.gliech@etu.unistra.fr>"]

[dependencies]
# Argument parsing
clap = "2.26.2"
structopt = "0.1.6"
structopt-derive = "0.1.6"

# Interactive prompt
rustyline = "1.0.0"
shlex = "0.1.1"

# Async I/O
futures = "0.1.17"
tokio-core = "0.1.10"
tokio-timer = "0.1.2"

# Logging
log = "0.3.8"
env_logger = "0.4.3"
